--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,12 @@
 /* Seleção de cores e fontes padrão*/
+
+@font-face {
+	font-family: "Eagle Lake";
+	src: url("../Assets/fonts/EagleLake-Regular.ttf") format("truetype");
+	font-weight: 400;
+	font-style: normal;
+  }
+
 body
 {
   /* espaçamentos da página */
@@ -19,14 +27,14 @@ body
 h1
 {
 	font-size: 3.5rem;
-	font-family: 'Amatic SC', sans-serif;
+	font-family: 'Eagle Lake', sans-serif;
 	text-align: center;
 }
 
 h2
 {
-	font-size: 3rem;
-	font-family: 'Comfortaa', sans-serif;
+	font-size: 2rem;
+	font-family: 'Eagle Lake', sans-serif;
 	text-align: center;
 }
 
@@ -35,6 +43,21 @@ h3
 	font-size: 1.5rem;
 	font-family: Constantia;
 	text-align: justify;
+	font-weight: normal;
+}
+
+h4
+{
+	font-size: 1.2rem;
+	font-family: 'Eagle Lake', sans-serif;
+	text-align: center;
+}
+
+h5{
+	font-size: 1.2rem;
+	font-family: Constantia;
+	text-align: center;
+	font-weight: normal;
 }
 
 /* configurações da caixa de texto principal */
@@ -51,6 +74,8 @@ h3
   margin-right: auto;
   font-family: 'Comfortaa', sans-serif;
 }
+
+
 
 /* formatação dos links */
 a.classe1:link, a.classe1:visited, a.classe1:active 
@@ -78,7 +103,8 @@ a.classe1:hover
   margin: 4px 2px;
   transition-duration: 0.4s;
   cursor: pointer;
-  font-family: 'Comfortaa', sans-serif;
+  font-family: Constantia;
+  font-weight: bold;
 }
 
 .button0
