--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ em{
 bdi{
 	font-style: normal;
 	/* font-family: ; */
-	font-size: 1.4rem;
+	font-size: 2.0rem;
 
 }
 
@@ -148,6 +148,9 @@ a.classe1:hover
   cursor: pointer;
   font-family: Constantia;
   font-weight: bold;
+  border-radius: 15px;
+  box-shadow: 3px 3px 8px black;
+
 }
 
 .button0
@@ -190,6 +193,7 @@ a.classe1:hover
   background-color: white;
   color: black;
   border: 2px solid black;
+  
 }
 
 
