--- a/css/style.css
+++ b/css/style.css
@@ -31,11 +31,16 @@ body
 
   /* cor de fundo */
   background-color: darkgray;
+  background-image: url('../Assets/img/background.jpg'); 
+  background-size: cover; 
+  background-position: center; 
+  background-repeat: no-repeat; 
 
   /* cor, tamanho de fonte, tipo de fonte */
   color: white;
   font-size: 1.5rem;
   font-family: 'Comfortaa', sans-serif;
+  
 }
 
 /* formatação dos tipos de texto */
