--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ body
 
   /* cor de fundo */
   background-color: darkgray;
-  background-image: url('../Assets/img/background.jpg'); 
+  background-image: url("../img/background.jpg"); 
   background-size: cover; 
   background-position: center; 
   background-repeat: repeat-y; 
